umol-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@bcl_hexane.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidSdfDataHeader
    message: Invalid SDF data header at line 17
molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidSdfDataHeader
    message: Invalid SDF data header at line 17
extended_molecule:
  success: false
  compound_count: 0
  error:
    error_type: InvalidSdfDataHeader
    message: Invalid SDF data header at line 17
extended_molecule_lenient:
  success: false
  compound_count: 0
  error:
    error_type: InvalidSdfDataHeader
    message: Invalid SDF data header at line 17
